# Hack-for-social-impact---Bay-area-affordable-housing-development

./: Fetch Compare Build.pptx  Pasted-A-Automated-Code-Collection-and-Parsing-AI-Agents-for-Data-Retrieval-Use-web-crawling-agents-to-pu-1731181455398.txt  Pasted-LookupError-Resource-93mpu-1731188022329.txt  Pasted-The-Terner-Center-seeks-new-methods-to-analyze-and-compare-building-codes-across-jurisdictions-Mino-1731181159040.txt  README.md  database.py  main.py  pyproject.toml  replit_zip_error_log.txt  styles.css
components/: code_comparison.py  policy_recommendations.py  search.py  update_tracker.py  visualizations.py
utils/: code_tracker.py  data_processing.py  nlp_processor.py
